test/corpus/css_function_hsl.txt
================
css_function_hsl
================

hsl(0, 0%, 0%)
hsl(0, 0%, 0%, 0%)

hsl(0deg, 0%, 0%)
hsl(0grad, 0%, 0%)
hsl(0grad, 0%, 0%)
hsl(0rad, 0%, 0%)
hsl(0turn, 0%, 0%)

hsl(0 0% 0%)
hsl(0 0% 0% / 0%)

hsl(0deg 0% 0%)
hsl(0grad 0% 0%)
hsl(0grad 0% 0%)
hsl(0rad 0% 0%)
hsl(0turn 0% 0%)


hsl(none None NONE)
hsl(none None NONE / none)

---

(source_file
  (css_function_hsl
    (css_function_hsl_legacy
      h: (css_hue)
      s: (css_percentage)
      l: (css_percentage)))
  (css_function_hsl
    (css_function_hsl_legacy
      h: (css_hue)
      s: (css_percentage)
      l: (css_percentage)
      a: (css_alpha_value)))
  (css_function_hsl
    (css_function_hsl_legacy
      h: (css_hue)
      s: (css_percentage)
      l: (css_percentage)))
  (css_function_hsl
    (css_function_hsl_legacy
      h: (css_hue)
      s: (css_percentage)
      l: (css_percentage)))
  (css_function_hsl
    (css_function_hsl_legacy
      h: (css_hue)
      s: (css_percentage)
      l: (css_percentage)))
  (css_function_hsl
    (css_function_hsl_legacy
      h: (css_hue)
      s: (css_percentage)
      l: (css_percentage)))
  (css_function_hsl
    (css_function_hsl_legacy
      h: (css_hue)
      s: (css_percentage)
      l: (css_percentage)))
  (css_function_hsl
    (css_function_hsl_modern
      h: (css_hue)
      s: (css_percentage)
      l: (css_percentage)))
  (css_function_hsl
    (css_function_hsl_modern
      h: (css_hue)
      s: (css_percentage)
      l: (css_percentage)
      a: (css_alpha_value)))
  (css_function_hsl
    (css_function_hsl_modern
      h: (css_hue)
      s: (css_percentage)
      l: (css_percentage)))
  (css_function_hsl
    (css_function_hsl_modern
      h: (css_hue)
      s: (css_percentage)
      l: (css_percentage)))
  (css_function_hsl
    (css_function_hsl_modern
      h: (css_hue)
      s: (css_percentage)
      l: (css_percentage)))
  (css_function_hsl
    (css_function_hsl_modern
      h: (css_hue)
      s: (css_percentage)
      l: (css_percentage)))
  (css_function_hsl
    (css_function_hsl_modern
      h: (css_hue)
      s: (css_percentage)
      l: (css_percentage)))
  (css_function_hsl
    (css_function_hsl_modern
      h: (css_keyword_none)
      s: (css_keyword_none)
      l: (css_keyword_none)))
  (css_function_hsl
    (css_function_hsl_modern
      h: (css_keyword_none)
      s: (css_keyword_none)
      l: (css_keyword_none)
      a: (css_keyword_none))))
