test/corpus/css_function_oklab.txt
================
css_function_oklab
================

oklab(0 0% 0%)
oklab(0% 0 0%)
oklab(0% 0% 0)

oklab(0 0% 0% / 0%)
oklab(0% 0 0% / 0%)
oklab(0% 0% 0 / 0%)

oklab(none None NONE)
oklab(none None NONE / none)

---

(source_file
  (css_function_oklab
    L: (css_number)
    a: (css_percentage)
    b: (css_percentage))
  (css_function_oklab
    L: (css_percentage)
    a: (css_number)
    b: (css_percentage))
  (css_function_oklab
    L: (css_percentage)
    a: (css_percentage)
    b: (css_number))
  (css_function_oklab
    L: (css_number)
    a: (css_percentage)
    b: (css_percentage)
    alpha: (css_alpha_value))
  (css_function_oklab
    L: (css_percentage)
    a: (css_number)
    b: (css_percentage)
    alpha: (css_alpha_value))
  (css_function_oklab
    L: (css_percentage)
    a: (css_percentage)
    b: (css_number)
    alpha: (css_alpha_value))
  (css_function_oklab
    L: (css_keyword_none)
    a: (css_keyword_none)
    b: (css_keyword_none))
  (css_function_oklab
    L: (css_keyword_none)
    a: (css_keyword_none)
    b: (css_keyword_none)
    alpha: (css_keyword_none)))
