test/corpus/css_function_rgb.txt
=============================
css_function_rgb
=============================

rgb(0, +0, -0)

rgb(+.0, +0.0, +0.0e+0, 0%)

rgb(0 +0 -0)
rgb(-.0 -0.0 -0.0e-0 / 0%)

rgb(0 1% 3% / 0.3)

---

(source_file
  (css_function_rgb
    (css_function_rgb_legacy
      r: (css_number)
      g: (css_number)
      b: (css_number)))
  (css_function_rgb
    (css_function_rgb_legacy
      r: (css_number)
      g: (css_number)
      b: (css_number)
      a: (css_alpha_value)))
  (css_function_rgb
    (css_function_rgb_modern
      r: (css_number)
      g: (css_number)
      b: (css_number)))
  (css_function_rgb
    (css_function_rgb_modern
      r: (css_number)
      g: (css_number)
      b: (css_number)
      a: (css_alpha_value)))
  (css_function_rgb
    (css_function_rgb_modern
      r: (css_number)
      g: (css_percentage)
      b: (css_percentage)
      a: (css_alpha_value))))
