test/corpus/css_function_rgba.txt
=============================
css_function_rgba
=============================

rgba(0, +0, -0)

rgba(+.0, +0.0, +0.0e+0, 0%)

rgba(0 +0 -0)
rgba(-.0 -0.0 -0.0e-0 / 0%)

rgba(0 1% 3% / 0.3)

Rgba(none None NONE)
rgBa(none None NONE / none)

---

(source_file
  (css_function_rgba
    (css_function_rgba_legacy
      r: (css_number)
      g: (css_number)
      b: (css_number)))
  (css_function_rgba
    (css_function_rgba_legacy
      r: (css_number)
      g: (css_number)
      b: (css_number)
      a: (css_alpha_value)))
  (css_function_rgba
    (css_function_rgba_modern
      r: (css_number)
      g: (css_number)
      b: (css_number)))
  (css_function_rgba
    (css_function_rgba_modern
      r: (css_number)
      g: (css_number)
      b: (css_number)
      a: (css_alpha_value)))
  (css_function_rgba
    (css_function_rgba_modern
      r: (css_number)
      g: (css_percentage)
      b: (css_percentage)
      a: (css_alpha_value)))
  (css_function_rgba
    (css_function_rgba_modern
      r: (css_keyword_none)
      g: (css_keyword_none)
      b: (css_keyword_none)))
  (css_function_rgba
    (css_function_rgba_modern
      r: (css_keyword_none)
      g: (css_keyword_none)
      b: (css_keyword_none)
      a: (css_keyword_none))))
